update README, makefile, replace hardcoded paths with customizable ones

--- a/root/defaults/mosquitto.conf
+++ b/root/defaults/mosquitto.conf
@@ -206,7 +206,7 @@
 # If run as a non-root user, this setting has no effect.
 # Note that on Windows this has no effect and so mosquitto should be started by
 # the user you wish it to run as.
-user alpine
+user S6_USER
 
 # =================================================================
 # Listeners
@@ -435,7 +435,7 @@ persistence_file mosquitto.db
 # Default is an empty string (current directory).
 # Set to e.g. /var/lib/mosquitto if running as a proper service on Linux or
 # similar.
-persistence_location /mosquitto/data/
+persistence_location /mosquitto/data
 
 
 # =================================================================
@@ -547,7 +547,7 @@ persistence_location /mosquitto/data/
 # See the TLS client require_certificate and use_identity_as_username options
 # for alternative authentication options. If a plugin is used as well as
 # password_file, the plugin check will be made first.
-password_file /mosquitto/config/.passwd
+password_file MOSQUITTO_CONFDIR/.passwd
 
 # Access may also be controlled using a pre-shared-key file. This requires
 # TLS-PSK support and a listener configured to use it. The file should be text
